feat: update native image configurations to enable access for javafx.graphics and improve JVM argument handling